[metadata]
description-file = README.rst

[wheel]
universal = 1

[coverage:run]
source = .
branch = True
omit =
    *settings*
    *__init__.py
    *urls*
    .tox*
    *tests*
    */migrations/*
    */features/*
    *manage.py
    *wsgi.py
    *celery.py
    */apps.py
    run*

[coverage:report]
show_missing = True
ignore_errors = True
fail_under = 90
exclude_lines =
    # Pragma
    pragma: no cover

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug
    if settings\.DEBUG

[coverage:paths]
source = ./

[coverage:html]
directory = .ci_report/coverage_html/

[coverage:xml]
output = .ci_report/coverage.xml

[pep8]
max-line-length = 120