[bumpversion]
current_version = 3.1.2
commit = True
tag = True

[metadata]
description-file = README.rst

[wheel]
universal = 1

[bumpversion:file:health_check/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:setup.py]
search = version={current_version}
replace = {new_version}

[bumpversion:file:README.rst]
search = :Version: {current_version}
replace = :Version: {new_version}

[nosetests]
verbosity = 1
detailed-errors = 1
with-coverage = 1
cover-package = task_dispatcher
cover-inclusive = 1
cover-min-percentage = 90

[coverage:run]
source = .
branch = True
omit = 
	*settings*
	*__init__.py
	*urls*
	.tox*
	*tests*
	*/migrations/*
	*/features/*
	*manage.py
	*wsgi.py
	*celery.py
	*/apps.py
	run*

[coverage:report]
show_missing = True
ignore_errors = True
fail_under = 90
exclude_lines = 
	pragma: no cover
	
	raise AssertionError
	raise NotImplementedError
	
	if 0:
	if __name__ == .__main__.:
	
	def __repr__
	if self\.debug
	if settings\.DEBUG

[coverage:paths]
source = ./

[coverage:html]
directory = .ci_report/coverage_html/

[coverage:xml]
output = .ci_report/coverage.xml

[pep8]
max-line-length = 120

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

